@@ -20,8 +20,19 @@ the version of the wlan-ng drivers may not support sniffing.  If you get errors
 that enabling monitor mode is not supported, you'll need to update your 
 Familiar install or compile them yourself in a cross-build environment.
 
+As of Familiar 0.5.3, Lucent/Orinoco cards do not support RFMON (PF_PACKET) and
+as such, cannot be used with Kismet without patching.  As of 8/28/02, Jamey
+Hicks who maintains the Familiar distribution promises future releases of
+Familiar will include Snax's patch for the orinoco_cs drivers.
+
+Familiar users with Cisco cards will need to set their kismet.conf file to use
+a cardtype of "cisco_cvs", with a capinterface of "wifi0".
+
 Some Familiar installs also do not include the latest ncurses and panels 
-libraries - these can be obtained from the Skif cluster.
+libraries - these can be obtained from the Skif cluster (telnet to 
+ipaq3.handhelds.org and copy the /lib/libpanel.so.5 and /lib/libncurses.so.5.0
+files to your ipaq).  You may also need to install the GNU stdc++ libraries
+by running "ipkg install libstdc++2.01-glibc2.2".
 
 Configure your card just as you would on an intel system - with the PCMCIA 
 sleeve, all the standard cards function and must be configured as they
